# TURRONCITOS

./: .gitignore  .mise.toml  .tool-versions  README.md  app.py  build.sh  mise.toml  netlify.toml  package.json  pyproject.toml  requirements.txt  requirements_modified.txt
templates/: ganancias.html  nueva_venta.html  respaldos.html  ventas.html
