[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-ventas-flask"
version = "1.0.0"
description = "Sistema de Ventas con Python Flask"
requires-python = ">=3.9,<3.10"
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.0.5",
    "Flask-Login==0.6.3",
    "Werkzeug==2.3.7",
    "openpyxl==3.1.2",
    "gunicorn==20.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
